--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -83,7 +83,7 @@ input, select, textarea {
 	}
 
 	html, body {
-		background: #EDFCFF;
+		background: #ffffff;
 	}
 
 	body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -111,18 +111,18 @@ input, select, textarea {
 		-ms-transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		border-bottom: dotted 1px;
-		color: #49D0EB;
+		color: #ff9933;
 		text-decoration: none;
 	}
 
 		a:hover {
-			color: #49D0EB !important;
+			color: orange !important;
 			border-bottom-color: transparent;
 		}
 
 	strong, b {
-		color: #002A33;
-		font-weight: 300;
+		color: black;
+		font-weight: 400;
 	}
 
 	em, i {
@@ -130,24 +130,24 @@ input, select, textarea {
 	}
 
 	p {
-		margin: 0 0 2em 0;
+		margin: 0 0 1em 0;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #002A33;
+		color: black;
 		font-weight: 300;
 		line-height: 1em;
 		margin: 0 0 1em 0;
 	}
 
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
-			color: inherit;
+			color: black;
 			border: 0;
 		}
 
 	h2 {
 		font-size: 2em;
-		line-height: 1.5em;
+		line-height: 1;
 		letter-spacing: -0.025em;
 	}
 
@@ -288,7 +288,7 @@ input, select, textarea {
 		}
 
 		99% {
-			color: #EDFCFF;
+			color: #002A33;
 			z-index: 100001;
 			-moz-transform: scale(0.5) rotate(360deg);
 			-webkit-transform: scale(0.5) rotate(360deg);
@@ -297,7 +297,7 @@ input, select, textarea {
 		}
 
 		100% {
-			color: #EDFCFF;
+			color: #002A33;
 			z-index: -1;
 			-moz-transform: scale(0.5) rotate(360deg);
 			-webkit-transform: scale(0.5) rotate(360deg);
@@ -317,7 +317,7 @@ input, select, textarea {
 		}
 
 		99% {
-			color: #EDFCFF;
+			color: #002A33;
 			z-index: 100001;
 			-moz-transform: scale(0.5) rotate(360deg);
 			-webkit-transform: scale(0.5) rotate(360deg);
@@ -326,7 +326,7 @@ input, select, textarea {
 		}
 
 		100% {
-			color: #EDFCFF;
+			color: #002A33;
 			z-index: -1;
 			-moz-transform: scale(0.5) rotate(360deg);
 			-webkit-transform: scale(0.5) rotate(360deg);
@@ -346,7 +346,7 @@ input, select, textarea {
 		}
 
 		99% {
-			color: #EDFCFF;
+			color: #002A33;
 			z-index: 100001;
 			-moz-transform: scale(0.5) rotate(360deg);
 			-webkit-transform: scale(0.5) rotate(360deg);
@@ -355,7 +355,7 @@ input, select, textarea {
 		}
 
 		100% {
-			color: #EDFCFF;
+			color: #002A33;
 			z-index: -1;
 			-moz-transform: scale(0.5) rotate(360deg);
 			-webkit-transform: scale(0.5) rotate(360deg);
@@ -375,7 +375,7 @@ input, select, textarea {
 		}
 
 		99% {
-			color: #EDFCFF;
+			color: #002A33;
 			z-index: 100001;
 			-moz-transform: scale(0.5) rotate(360deg);
 			-webkit-transform: scale(0.5) rotate(360deg);
@@ -384,7 +384,7 @@ input, select, textarea {
 		}
 
 		100% {
-			color: #EDFCFF;
+			color: #002A33;
 			z-index: -1;
 			-moz-transform: scale(0.5) rotate(360deg);
 			-webkit-transform: scale(0.5) rotate(360deg);
@@ -593,7 +593,7 @@ input, select, textarea {
 			-webkit-animation: overlay-hide 1.5s ease-in forwards !important;
 			-ms-animation: overlay-hide 1.5s ease-in forwards !important;
 			animation: overlay-hide 1.5s ease-in forwards !important;
-			background: #A7DDE7;
+			background: #ffffff;
 			content: '';
 			display: block;
 			height: 100%;
@@ -2186,7 +2186,7 @@ input, select, textarea {
 	}
 
 		header.major:after {
-			background: #49D0EB;
+			background: #ff9933;
 			content: '';
 			display: inline-block;
 			height: 0.2em;
@@ -2270,7 +2270,7 @@ input, select, textarea {
 
 		select option {
 			color: #002A33;
-			background: #EDFCFF;
+			background: #f5f5f5;
 		}
 
 		select:focus::-ms-value {
@@ -2352,13 +2352,13 @@ input, select, textarea {
 		input[type="checkbox"]:checked + label:before,
 		input[type="radio"]:checked + label:before {
 			background: rgba(255, 255, 255, 0.25);
-			color: #A7DDE7;
+			color: #002A33;
 			content: '\f00c';
 		}
 
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
-			border-color: #49D0EB;
+			border-color: #ff9933;
 		}
 
 	input[type="checkbox"] + label:before {
@@ -2465,7 +2465,7 @@ input, select, textarea {
 			}
 
 			.icon.alt:before {
-				color: #EDFCFF !important;
+				color: #002A33 !important;
 				text-shadow: 1px 0 0 #002A33, -1px 0 0 #002A33, 0 1px 0 #002A33, 0 -1px 0 #002A33;
 			}
 
@@ -2832,14 +2832,14 @@ input, select, textarea {
 		-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-		background-color: transparent;
+		background-color: #ffffff;
 		border-radius: 4px;
 		border: 0;
-		box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.3);
+		box-shadow: inset 0 0 0 1px #ffffff;
 		color: #002A33 !important;
 		cursor: pointer;
 		display: inline-block;
-		font-weight: 300;
+		font-weight: 500;
 		height: 3em;
 		line-height: 3em;
 		padding: 0 2.25em;
@@ -2855,15 +2855,16 @@ input, select, textarea {
 		input[type="button"]:active,
 		.button:hover,
 		.button:active {
-			box-shadow: inset 0 0 0 1px #49D0EB;
-			color: #49D0EB !important;
+            background-color: #ff9933;
+			box-shadow: inset 0 0 0 1px #ff9933;
+			color: #ffffff !important;
 		}
 
 		input[type="submit"]:active,
 		input[type="reset"]:active,
 		input[type="button"]:active,
 		.button:active {
-			background-color: rgba(228, 76, 101, 0.15);
+			background-color: #ff9933;
 		}
 
 		input[type="submit"].icon:before,
@@ -2898,7 +2899,7 @@ input, select, textarea {
 		input[type="reset"].primary,
 		input[type="button"].primary,
 		.button.primary {
-			background-color: #49D0EB;
+			background-color: #ff9933;
 			box-shadow: none;
 			color: #002A33 !important;
 		}
@@ -2907,14 +2908,14 @@ input, select, textarea {
 			input[type="reset"].primary:hover,
 			input[type="button"].primary:hover,
 			.button.primary:hover {
-				background-color: #49D0EB;
+				background-color: #ff9933;
 			}
 
 			input[type="submit"].primary:active,
 			input[type="reset"].primary:active,
 			input[type="button"].primary:active,
 			.button.primary:active {
-				background-color: #49D0EB;
+				background-color: #ff9933;
 			}
 
 		input[type="submit"].disabled, input[type="submit"]:disabled,
@@ -2926,7 +2927,7 @@ input, select, textarea {
 		.button:disabled {
 			background-color: rgba(255, 255, 255, 0.3) !important;
 			box-shadow: none !important;
-			color: #EDFCFF !important;
+			color: #002A33 !important;
 			cursor: default;
 			opacity: 0.25;
 		}
@@ -2971,7 +2972,7 @@ input, select, textarea {
 		background-position: center center;
 		background-size: cover;
 		box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.25);
-		height: 100vh;
+		height: 500px; /*was 100vh*/
 		overflow: hidden;
 		position: relative;
 	}
@@ -3083,7 +3084,7 @@ input, select, textarea {
 			-webkit-transition: -webkit-transform 1s ease, opacity 1s ease;
 			-ms-transition: -ms-transform 1s ease, opacity 1s ease;
 			transition: transform 1s ease, opacity 1s ease;
-			background: rgba(255, 255, 255, 0.5);
+			background: rgba(255, 255, 255, .80);
 			border-style: solid;
 			opacity: 1;
 			position: absolute;
@@ -3107,7 +3108,7 @@ input, select, textarea {
 
 		.spotlight.top .content, .spotlight.bottom .content {
 			left: 0;
-			padding: 5.1em 0 3.1em 0;
+			padding: 2em 0 2em 0;
 			width: 100%;
 		}
 
@@ -3123,7 +3124,7 @@ input, select, textarea {
 
 		.spotlight.left .content, .spotlight.right .content {
 			height: 101%;
-			padding: 6em 3em;
+			padding: 2em 2em;
 			top: 0;
 			width: 28em;
 		}
@@ -3139,15 +3140,15 @@ input, select, textarea {
 		}
 
 		.spotlight.style1 .content {
-			border-color: #002A33;
+			border-color: #ffffff;
 		}
 
 		.spotlight.style2 .content {
-			border-color: #002A33;
+			border-color: #ffffff;
 		}
 
 		.spotlight.style3 .content {
-			border-color: #002A33;
+			border-color: #ffffff;
 		}
 
 		.spotlight.inactive .content {
@@ -3201,7 +3202,7 @@ input, select, textarea {
 	}
 
 		.wrapper.style2 {
-			background: #A7DDE7;
+			background: black;
 		}
 
 			.wrapper.style2 input[type="text"]:focus,
@@ -3221,7 +3222,7 @@ input, select, textarea {
 			.wrapper.style2 .button:active {
 				background-color: rgba(255, 255, 255, 0.075) !important;
 				box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.5) !important;
-				color: #EDFCFF !important;
+				color: black !important;
 			}
 
 			.wrapper.style2 input[type="submit"]:active,
@@ -3235,8 +3236,8 @@ input, select, textarea {
 			.wrapper.style2 input[type="reset"].primary,
 			.wrapper.style2 input[type="button"].primary,
 			.wrapper.style2 .button.primary {
-				background-color: #EDFCFF;
-				color: #49D0EB !important;
+				background-color: #ffffff;
+				color: #ff9933 !important;
 			}
 
 				.wrapper.style2 input[type="submit"].primary:hover, .wrapper.style2 input[type="submit"].primary:active,
@@ -3248,7 +3249,7 @@ input, select, textarea {
 				.wrapper.style2 .button.primary:active {
 					background-color: rgba(255, 255, 255, 0.075) !important;
 					box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.5) !important;
-					color: #002A33 !important;
+					color: black !important;
 				}
 
 				.wrapper.style2 input[type="submit"].primary:active,
@@ -3313,7 +3314,7 @@ input, select, textarea {
 /* Dropotron */
 
 	.dropotron {
-		background: rgba(39, 40, 51, 0.965);
+		background: rgba(0, 0, 0, 1);
 		border-radius: 4px;
 		box-shadow: 0 0.075em 0.35em 0 rgba(0, 0, 0, 0.125);
 		list-style: none;
@@ -3340,7 +3341,7 @@ input, select, textarea {
 			}
 
 			.dropotron > li.active > a, .dropotron > li.active > span {
-				color: #49D0EB;
+				color: #ff9933;
 			}
 
 		.dropotron.level-0 {
@@ -3353,7 +3354,7 @@ input, select, textarea {
 				-webkit-transform: rotate(45deg);
 				-ms-transform: rotate(45deg);
 				transform: rotate(45deg);
-				background: #A7DDE7;
+				background: #ff9933;
 				content: '';
 				display: block;
 				height: 1em;
@@ -3374,7 +3375,7 @@ input, select, textarea {
 	}
 
 	#header {
-		background: rgba(255, 255, 51, 0.965);
+		background: rgba(255, 255, 255, 0.965);
 		box-shadow: 0 0 0.25em 0 rgba(0, 0, 0, 0.25);
 		cursor: default;
 		height: 3.5em;
@@ -3403,6 +3404,8 @@ input, select, textarea {
 
 			#header nav ul {
 				margin: 0;
+                color: black;
+				font-weight: 500;
 			}
 
 				#header nav ul li {
@@ -3430,7 +3433,7 @@ input, select, textarea {
 						}
 
 					#header nav ul li.active > a, #header nav ul li.active > span {
-						color: #A7DDE7;
+						color: #ff9933;
 					}
 
 					#header nav ul li > ul {
@@ -3442,8 +3445,8 @@ input, select, textarea {
 	}
 
 	body.landing #header {
-		background: transparent;
-		box-shadow: none;
+		background: rgba(255, 255, 255, 0.8);
+		box-shadow: .10;
 		position: absolute;
 	}
 
@@ -3451,7 +3454,7 @@ input, select, textarea {
 
 	#banner {
 		background-attachment: fixed;
-		background-color: #A7DDE7;
+		background-color: #ffffff;
 		background-image: url("../../images/pic11.jpg");
 		background-position: center center;
 		background-size: cover;
@@ -3471,10 +3474,10 @@ input, select, textarea {
 		}
 
 		#banner:after {
-			background-image: -moz-linear-gradient(top, rgba(255,255,255, 0.5), rgba(167,221,231, 0.2)), url("images/overlay.png");;
-			background-image: -webkit-linear-gradient(top, rgba(255,255,255, 0.5), rgba(167,221,231, 0.2)), url("images/overlay.png");;
-			background-image: -ms-linear-gradient(top, rgba(255,255,255, 0.5), rgba(167,221,231, 0.2)), url("images/overlay.png");;
-			background-image: linear-gradient(top, rgba(255,255,255, 0.5), rgba(167,221,231, 0.2)), url("images/overlay.png");;
+			background-image: -moz-linear-gradient(top, rgba(255,255,255, 0), rgba(255,255,255, 0.32)), url("images/overlay.png");;
+			background-image: -webkit-linear-gradient(top, rgba(255,255,255, 0), rgba(255,255,255, 0.32)), url("images/overlay.png");;
+			background-image: -ms-linear-gradient(top, rgba(255,255,255, 0), rgba(255,255,255, 0.32)), url("images/overlay.png");;
+			background-image: linear-gradient(top, rgba(255,255,255, 0), rgba(255,255,255, 0.32)), url("images/overlay.png");;
 			content: '';
 			display: block;
 			height: 100%;
@@ -3490,7 +3493,7 @@ input, select, textarea {
 			max-width: 95%;
 			padding: 6em;
 			position: relative;
-			text-align: right;
+			text-align: middle;
 			vertical-align: middle;
 			z-index: 1;
 		}
@@ -3532,7 +3535,7 @@ input, select, textarea {
 /* Footer */
 
 	#footer {
-		background: #EDFCFF;
+		background: #F5F5F5;
 		padding: 6em 0;
 		text-align: center;
 	}
@@ -3593,7 +3596,7 @@ input, select, textarea {
 		/* Basic */
 
 			body, input, select, textarea {
-				font-size: 13pt;
+				font-size: 11pt;
 			}
 
 	}
@@ -3605,13 +3608,13 @@ input, select, textarea {
 		/* Basic */
 
 			body, input, select, textarea {
-				font-size: 11.5pt;
+				font-size: 10.5pt;
 			}
 
 		/* Spotlight */
 
 			.spotlight.top .content {
-				padding: 3.825em 0 1.825em 0;
+				padding: 2em 0 2em 0;
 			}
 
 			.spotlight.bottom .content {
@@ -3619,7 +3622,7 @@ input, select, textarea {
 			}
 
 			.spotlight.left .content, .spotlight.right .content {
-				padding: 4.5em 2.5em;
+				padding: 2em 2em;
 				width: 25em;
 			}
 
@@ -3656,7 +3659,7 @@ input, select, textarea {
 		/* Basic */
 
 			body, input, select, textarea {
-				font-size: 12pt;
+				font-size: 10pt;
 			}
 
 		/* Spotlight */
@@ -3674,12 +3677,12 @@ input, select, textarea {
 				}
 
 				.spotlight .content {
-					background-color: #A7DDE7;
+					background-color: #ffffff;
 					border-width: 0 !important;
 					border-top-width: 0.35em !important;
 					bottom: auto !important;
 					left: auto !important;
-					padding: 4.5em 2.5em 2.5em 2.5em !important;
+					padding: 2em 2em 2em 2em !important;
 					position: relative;
 					right: auto !important;
 					text-align: center;
@@ -3817,7 +3820,7 @@ input, select, textarea {
 
 				.spotlight .content {
 					border-top-width: 0.2em !important;
-					padding: 3.25em 1.5em 1.25em 1.5em !important;
+					padding: 2em 2em 2em 2em !important;
 				}
 
 		/* Wrapper */
@@ -3868,7 +3871,7 @@ input, select, textarea {
 				-ms-transition: -ms-transform 0.5s ease;
 				transition: transform 0.5s ease;
 				padding-bottom: 1px;
-				padding-top: 44px !important;
+				padding-top: 0px !important;
 			}
 
 			#titleBar {
@@ -3887,14 +3890,14 @@ input, select, textarea {
 				top: 0;
 				width: 100%;
 				z-index: 10001;
-				background: #002A33;
+				background: rgba(255,255,255, 0.8);
 				box-shadow: 0 0.125em 0.125em 0 rgba(0, 0, 0, 0.125);
 			}
 
 				#titleBar .title {
-					color: #002A33;
+					color: black;
 					display: block;
-					font-weight: 300;
+					font-weight: 600;
 					height: 44px;
 					line-height: 44px;
 					text-align: center;
@@ -3930,7 +3933,7 @@ input, select, textarea {
 					}
 
 					#titleBar .toggle:before {
-						background: #e44c65;
+						background: #ff9933;
 						color: rgba(255, 255, 255, 0.5);
 						content: '\f0c9';
 						display: block;
@@ -3965,14 +3968,14 @@ input, select, textarea {
 				top: 0;
 				width: 275px;
 				z-index: 10002;
-				background: #181920;
+				background: black;
 				padding: 0.75em 1.25em;
 			}
 
 				#navPanel .link {
 					border: 0;
 					border-top: solid 1px rgba(255, 255, 255, 0.05);
-					color: rgba(255, 255, 255, 0.75);
+					color: rgba(255, 255, 255, 0.85);
 					display: block;
 					height: 3em;
 					line-height: 3em;
@@ -3988,7 +3991,7 @@ input, select, textarea {
 					}
 
 					#navPanel .link.depth-0 {
-						color: #002A33;
+						color: #ff9933;
 						font-weight: 300;
 					}
 
@@ -4076,7 +4079,7 @@ input, select, textarea {
 			}
 
 			.spotlight .content {
-				padding: 3em 1.25em 1em 1.25em !important;
+				padding: 2em 2em 2em 2em !important;
 			}
 
 		/* Wrapper */
