--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -4,8 +4,8 @@ ul {
     list-style-type: none;
 }
 
-a {
-  color: currentcolor;
+.titleorange {
+  color: #ff9933;
 }
 
 /* Utilities */
@@ -13,9 +13,9 @@ a {
   display: grid;
   grid-template-columns: repeat(
     auto-fill,
-    minmax(var(--auto-grid-min-size, 13rem), 1fr)
+    minmax(var(--auto-grid-min-size, 16rem), 2fr)
   );
-  grid-gap: var(--auto-grid-gap, 2em);
+  grid-gap: var(--auto-grid-gap, 1em);
   padding: 0;
 }
 
