--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2847,11 +2847,11 @@ input, select, textarea {
 		-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-		background-color: #f5f5f5;
+		background-color: #002A33;
 		border-radius: 4px;
 		border: 0;
-		box-shadow: inset 0 0 0 1px #f5f5f5;
-		color: #002A33 !important;
+		box-shadow: inset 0 0 0 1px #002A33;
+		color: white !important;
 		cursor: pointer;
 		display: inline-block;
 		font-weight: 500;
