--- a/assets/css/people.css
+++ b/assets/css/people.css
@@ -11,6 +11,38 @@
     height: 150px;
 }
 
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 9999; /* Sit on top */
+  padding-top: 80px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.5); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  min-height: 350px;
+  position: relative;
+  background-color: #f5f5f5;
+  margin: auto;
+  padding: 20px;
+  width: 80%;
+  animation-name: animatetop;
+  animation-duration: 0.5s
+}
+
+.portrait{
+    float: right; padding: 8px 8px 8px 8px;
+}
+
+
 /* Display the columns below each other instead of side by side on small screens */
 @media screen and (max-width: 1680px) {
   .name{
@@ -27,6 +59,15 @@
 
   .name{
     height: 100px;
+  }
+    
+  .portrait{
+    object-fit: cover;
+    width:100%;
+  }
+    
+  .modal-content{    
+    width: 95%;
   }
 }
 
@@ -52,38 +93,6 @@ img {
   object-fit: cover;
   width:230px;
   height:230px;
-}
-
-.portrait{
-    float: right; padding: 8px 8px 8px 8px;
-}
-
-/* The Modal (background) */
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 9999; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-
-/* Modal Content */
-.modal-content {
-  min-height: 350px;
-  position: relative;
-  background-color: #fefefe;
-  margin: auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
-  animation-name: animatetop;
-  animation-duration: 0.6s
 }
 
 /* Add Animation */
