--- a/assets/css/people.css
+++ b/assets/css/people.css
@@ -39,9 +39,12 @@
 }
 
 .portrait{
-    float: right; padding: 8px 8px 8px 8px;
+    float: right; 
+    padding: 0px 18px 8px 18px;
+    object-fit: cover;
+    width:300px;
+    height:260px;
 }
-
 
 /* Display the columns below each other instead of side by side on small screens */
 @media screen and (max-width: 1680px) {
@@ -56,14 +59,20 @@
     width: 100%;
     display: block;
   }
+ 
+  .modal-content {
+  min-height: 390px;
+  }
 
   .name{
     height: 100px;
   }
     
   .portrait{
+    float: right; padding: 0px 18px 8px 18px;
     object-fit: cover;
     width:100%;
+    height:300px;
   }
     
   .modal-content{    
@@ -87,12 +96,6 @@
   content: "";
   clear: both;
   display: table;
-}
-
-img {
-  object-fit: cover;
-  width:230px;
-  height:230px;
 }
 
 /* Add Animation */
