--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,7 +30,7 @@ footer, header, hgroup, menu, nav, section {
 	display: block;}
 
 .contactcolumns{
-  width = 100%;
+  width: 100%;
   margin: auto auto;
   display: grid;
   grid-gap: 3rem;
