--- a/iTrusst/assets/css/tables2.css
+++ b/iTrusst/assets/css/tables2.css
@@ -11,6 +11,9 @@ table {
 /*    white-space: nowrap;*/
 }
 
+body, input, select, textarea {
+    font-size: 12pt;
+}
 
 #customers {
   font-family: Arial, Helvetica, sans-serif;
@@ -80,5 +83,5 @@ table td, th{
 }
     
 body, input, select, textarea {
-            font-size: 9pt;
-        }
+    font-size: 9pt;
+}
