--- a/iTrusst/assets/css/main.css
+++ b/iTrusst/assets/css/main.css
@@ -252,7 +252,7 @@ input, select, textarea {
     }
 
     .blockorange{
-        background-color: #6E5295; 
+        background-color: #ccb9da; 
         color: white
     }
 
