--- a/iTrusst/assets/css/tables3.css
+++ b/iTrusst/assets/css/tables3.css
@@ -25,7 +25,7 @@ table {
 }
 
 body, input, select, textarea {
-    font-size: 12pt;
+    font-size: 11pt;
 }
 
 #customers {
@@ -40,7 +40,7 @@ body, input, select, textarea {
 
 #customers td {
   background-color: #f5f5f5;
-  text-align: left;
+  text-align: center;
   color: black;
   vertical-align: top;
 }
