--- a/iTrusst/assets/css/tables3.css
+++ b/iTrusst/assets/css/tables3.css
@@ -1,3 +1,46 @@
+.buttonmenupeople{
+  background-color: #6E5295;
+  border: none;
+  color: white;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  margin: 0px 1px;
+  cursor: pointer;
+}
+
+.buttonmenupeople:hover{
+  background-color: #f5f5f5;
+  color: #6E5295;
+}
+
+a {
+    all: unset;
+}
+
+.arrow {
+  border: solid #6E5295;
+  border-width: 0 4px 4px 0;
+  display: inline-block;
+  padding: 6px;
+}
+
+.right {
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+}
+
+.left {
+  transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
+}
+
+.arrow:hover {
+    cursor: pointer;
+}
+
 .mostly-customized-scrollbar::-webkit-scrollbar {
   width: 50px;
   height: 10px;
@@ -70,3 +113,5 @@ table td, th{
 body, input, select, textarea {
     font-size: 9pt;
 }
+}
+
